Unified: Fix user chooser minor issues.

This CL fixes two issues related to UserChooserView in
UnifiedSystemTray.
* Ensure the UnifiedSystemTray bubble is expanded before showing
  UserChooserView.
* Show error messages when number of added users reaches the limit.

BUG=890720,890722
TEST=manual

Change-Id: I2ea7c807da18e165f66345e50b9c6cf39e954840
Reviewed-on: https://chromium-review.googlesource.com/1255745
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595760}
Former-commit-id: 7f831f83192ac398efdde6ea0e10d9eaaf6a4c70